# deepdigest

./: .env  Dockerfile  README.md  railway.toml  requirements.txt
alembic/: env.py
bot/news_digest_bot_fixed_C_49/: .env.example  ADDED_FILES_V5_2.md  ADDED_FILES_V5_3.md  ADDED_FILES_V5_4.md  ADDED_FILES_V6.md  ADDED_FILES_V6_1.md  ADDED_FILES_V6_2.md  ADDED_FILES_V6_3.md  ADDED_FILES_V7.md  ADDED_FILES_V7_1.md  CHANGED_FILES.md  CHANGED_FILES_V5_1.md  CHANGED_FILES_V5_2.md  CHANGED_FILES_V5_3.md  CHANGED_FILES_V5_4.md  CHANGED_FILES_V6.md  CHANGED_FILES_V6_1.md  CHANGED_FILES_V6_2.md  CHANGED_FILES_V6_3.md  CHANGED_FILES_V7.md  CHANGED_FILES_V7_1.md  DEBUG_GUIDE_V6_RU.md  MANIFEST_AFTER.txt  MANIFEST_BEFORE.txt  MANIFEST_V5_1_AFTER.txt  MANIFEST_V5_1_BEFORE_V5_2.txt  MANIFEST_V5_2_AFTER.txt  MANIFEST_V5_2_BEFORE_V5_3.txt  MANIFEST_V5_3_AFTER.txt  MANIFEST_V5_3_BEFORE_V5_4.txt  MANIFEST_V5_4_AFTER.txt  MANIFEST_V5_BEFORE_V51.txt  MANIFEST_V6_1_AFTER.txt  MANIFEST_V6_1_BEFORE_V6_2.txt  MANIFEST_V6_2_AFTER.txt  MANIFEST_V6_2_BEFORE_V6_3.txt  MANIFEST_V6_3_AFTER.txt  MANIFEST_V6_BEFORE.txt  PATCH.diff  PATCH_V5_1_TO_V5_2.diff  (+52 more)
bot/news_digest_bot_fixed_C_49/app/: main.py  scheduler_runner.py
bot/news_digest_bot_fixed_C_49/debug_runs/: 20260428T160031Z-bmw-84298.json  20260428T160230Z-bmw-34128.json  20260428T160515Z-tramp-64711.json  20260428T160655Z-tramp-51870.json  20260428T160831Z-vitality-83213.json  20260428T160936Z-vitality-65374.json  20260428T161105Z-макдональс-80123.json  20260428T161346Z-mcdonald-s-62283.json  20260428T161533Z-старобільськ-31890.json  (+1 more)
(+98 files in other folders)
