[project]
name = "news-digest-bot"
version = "0.1.0"
description = "Telegram news digest bot with deduplication, scheduling and OpenRouter summaries"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-telegram-bot>=22.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "apscheduler>=3.11.0",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.10.0",
    "orjson>=3.10.0",
    "redis>=5.2.0",
    "tenacity>=9.0.0",
]
authors = [{ name = "OpenAI" }]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
plugins = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
